# fks_master

./: .docker-build-args  .env.development  .env.generated  .env.gpu  .env.production  .env.staging  .env.template  .env.test  .gitmodules  Cargo.toml  Dockerfile  README.md  analysis.sh  deny.toml  docker-compose.yml  package-lock.json  package.json  permissions.sh  pytest.ini  start.sh  stop.sh
.github/staging/: fks_data-ci.yml  fks_master_ci.yml  service-ci-template.yml
config/: monitor.toml
config/alertmanager/: alertmanager.yml
config/grafana/provisioning/dashboards/: dashboard-provisioning.yaml
config/grafana/provisioning/dashboards/json/: system-overview.json
config/postgres-exporter/: queries.yaml
config/prometheus/: prometheus.yml
config/prometheus/rules/: basic-alerts.yml
shared/scripts/dev/: smoke_data.py
shared/scripts/import/fks_master_scripts/: generate_compose.sh
shared/scripts/testing/: test_rithmic_integration.py
src/: auth.rs  compose.rs  config.rs  health.rs  lib.rs  main.rs  metrics.rs  models.rs  monitor.rs  websocket.rs
templates/: dashboard.html
tests/: compose_tests.rs  config_tests.rs  jwt_compose_tests.rs
