[package]
name = "fks_master"
version = "0.1.0"
edition = "2021"
description = "FKS Master Service Orchestration and Monitoring System"
authors = ["FKS Team"]
license = "MIT"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
axum = { version = "0.8.4", features = ["ws", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "http-proto", "tls"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tonic = { version = "0.14.1" }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
dashmap = "6.1.0"
futures = "0.3.31"
clap = { version = "4.5.46", features = ["derive"] }
config = "0.15.15"
toml = "0.9.5"
once_cell = "1.21.3"
prometheus = "0.14.0"
axum-prometheus = "0.9.0"
pin-project-lite = "0.2.16"
bollard = { version = "0.17.1", features = ["chrono"] }
jsonwebtoken = "9.3.1"
# Pin sysinfo to version before edition2024 requirement (0.37.0 pulled edition2024)
sysinfo = { version = "0.32.1", features = ["system"] }

[dev-dependencies]
tokio-test = "0.4.4"
http = "1.3.1"
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
tempfile = "3.21.0"
serial_test = "3.2.0"

[features]
default = []
detailed_health = []

[[bin]]
name = "fks_master"
path = "src/main.rs"

[lib]
name = "fks_master"
path = "src/lib.rs"
crate-type = ["rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
